--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.jdbc.lob.non_context_create=true
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.data.rest.base-path=/api
 spring.servlet.multipart.enabled=true
-spring.main.allow-circular-references=true
-app.jwtSecretKey=SECRET
-app.jwtExpireInMilSec=8640000000000000
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_create=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+spring.jpa.open-in-view=true
+file.upload-pdf-dir=/absolute/path/to/uploads/pdfs/
+file.upload-image-dir=/absolute/path/to/uploads/images/
