--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_create=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+app.jwtSecretKey=library
 spring.jpa.open-in-view=true
 file.upload-pdf-dir=/absolute/path/to/uploads/pdfs/
 file.upload-image-dir=/absolute/path/to/uploads/images/
