--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_create=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.data.rest.base-path=/api
+server.servlet.context-path=/api
 
 # PostgreSQL Hikari Configuration
 spring.datasource.hikari.maximum-pool-size=10
@@ -39,3 +41,23 @@ file.upload-image-dir=uploads/images/
 
 # JWT Secret Key
 app.jwtSecretKey=library
+
+#swagger
+#springdoc.swagger-ui.path=/swagger-ui/index.html
+#springdoc.api-docs.path=/v3/api-docs
+#springdoc.api-docs.enabled=true
+#springdoc.swagger-ui.enabled=true
+#springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/v3/api-docs
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# Ilova haqida ma'lumot
+#application-description=Library Server API
+#application-version=1.0.0
+
+# Logging konfiguratsiyasi
+#logging.level.org.springframework.web=ERROR
+#logging.level.com.hendisantika.springboot.swagger=DEBUG
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+#logging.file.name=./logs/application.log
